--- a/feedpage/homepage.erb
+++ b/feedpage/homepage.erb
@@ -47,8 +47,8 @@ p.stamp {
         <h4>HEADER</h4>
         <ul>
           <li><a href="https://www.facebook.com">Facebook</a></li>
-          <li><a href="https://plus.google.com">Google+</a></li>
-          <li><a href="https://mail.google.com/mail/u/1">Gmail</a></li>
+          <li><a href="https://plus.google.com/u/1">Google+</a></li>
+          <li><a href="https://mail.google.com/mail/u/0">Gmail</a></li>
           <li><a href="http://www.story-games.com/forums">Story Games</a></li>
           <li><a href="https://github.com/mulias">Github</a></li>
         </ul>
